--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/adamvert/launch-iossim-devtools/issues"
-  }
+  },
+  "devDependencies": {
+     "mocha": "",
+     "should": ""
+   }
 }
